--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Jost";
+}
+
+@layer components {
+  /* texts */
+  .heading-lg {
+    @apply text-[48px] leading-[48px] font-bold;
+  }
+  .heading-md {
+    @apply text-[40px] leading-[48px] tracking-[] font-semibold;
+  }
+  .heading-sm {
+    @apply text-[20px] leading-[26px] tracking-[] font-semibold;
+  }
+
+  .body {
+    @apply text-[16px] leading-[26px];
+  }
+}
