--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,9 @@ body {
   .heading-sm {
     @apply text-[20px] leading-[26px] tracking-[] font-semibold;
   }
+  .heading-mobile {
+    @apply text-[32px];
+  }
   .body {
     @apply text-[16px] leading-[26px];
   }
